fix: adjusted nav item spacing

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,7 +11,7 @@ nav ul {
 
 nav ul li {
   display: inline;
-  margin-right: 1rem;
+  margin-right: 20px;
 }
 
 .user {
